# telegram-dify-bot

./: .dockerignore  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.claude/: settings.local.json
.cursor/: mcp.json
.cursor/rules/: read-context7-docs.mdc
.github/workflows/: docker-build.yaml
app/: constant.py  deploy.py  main.py  models.py  prompts.py  settings.py  utils.py
app/dify/: __init__.py  dify_client.py  models.py  workflow_tool.py
app/mybot/: __init__.py  cli.py  common.py  prompts.py  task_handler.py  task_manager.py
app/mybot/handlers/: __init__.py  acl_command.py  chat_member.py  command_handler.py  message_handler.py  translation.py
app/mybot/services/: __init__.py  context_service.py  dify_service.py  instant_view_service.py  interaction_service.py  message_formatter.py  response_service.py  telegram_media_service.py
app/plugins/: 001.collect_wiki.ipynb
app/plugins/commit_message_generator/: __init__.py  node.py
app/plugins/instant_view_generator/: __init__.py  node.py
app/plugins/social_parser/: __init__.py  base.py  example_parser.py.template  fallback_parser.py  xhs.py  xhs_downloader.py  xhs_parser.py
app/plugins/zlib_access_points/: __init__.py  crud.py  node.py
app/triggers/: __init__.py
app/triggers/auto_translation/: __init__.py  crud.py  language_detector.py  models.py  node.py
app/triggers/zlib_access_points/: __init__.py  crud.py  node.py
app/utils/: __init__.py  file_utils.py  image_compressor.py
docker/: .env.example  Dockerfile  dev-docker.md  docker-compose.yaml
docker/telegram-bot-api-server/: .env.example  Dockerfile  README.md  docker-compose.yaml  start.sh
examples/: 001.download_xhs_video.ipynb  agent_log.json  check_dataset.py  check_dify.py  echo_bot.py  ff.py  format_markdown.py  translation_bot.py  xx.py  yt_dlp_exp.py
scripts/: generate_commit_message.py
tests/: test_commands_imagine.py
(+31 files in other folders)
