[project]
name = "tg-translation-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "openai>=1.93.0",
    "pydantic-settings>=2.10.1",
    "python-telegram-bot[all]>=22.2",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ruff>=0.12.2",
]
